--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "src/popup.html",
     "default_title": "TabTamer",
     "default_icon": {
       "16": "icons/icon16.png",
