--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "tabs",
     "storage",
     "sessions",
-    "activeTab"
+    "activeTab",
+    "windows"
   ],
   "host_permissions": [
     "<all_urls>"
