feat: 添加分组拖拽功能，优化标签页管理体验
- 实现分组拖拽排序功能，用户可以通过拖拽调整分组顺序
- 更新 App.vue，增强分组的交互体验，添加拖拽手柄和悬停效果
- 在 tabStore 中新增分组移动和重排序方法，确保状态持久化
- 优化拖拽数据处理，支持多种数据格式，提升兼容性
- 更新样式，改善分组和拖拽效果的视觉表现

--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "copy-manifest": "cp manifest.json dist/ && cp background.js dist/ && cp content.js dist/ && mkdir -p dist/icons && cp icons/* dist/icons/ && cp dist/src/popup.html dist/ && cp dist/src/options.html dist/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.3.0",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "pinia": "^2.1.6",
-    "@vueuse/core": "^10.3.0"
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.242",
     "@vitejs/plugin-vue": "^4.3.4",
-    "vite": "^4.4.9",
     "typescript": "^5.1.6",
-    "@types/chrome": "^0.0.242"
+    "vite": "^4.4.9"
   },
   "keywords": [
     "chrome-extension",
