--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vueuse/core": "^10.3.0",
     "pinia": "^2.1.6",
+    "sortablejs": "^1.15.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vuedraggable": "^4.1.0"
